# livon

./: .env.example  CHANGELOG.md  LICENSE  Taskfile.yml
.gemini/: styleguide.md
.github/pr-release-templates/: release-template.erb
.github/workflows/: add-labels.yml  check-version.yml  pr-release-beta.yml  release-beta.yml  release-create-lunas-beta.yml  release-formatter-beta.yml  release-formatter.yml  release-vite-plugin-beta.yml  release-vite-plugin.yml  release.yml  run-test.yml
crates/: Cargo.toml
crates/livon_compiler/: Cargo.toml
crates/livon_compiler/src/: lib.rs
crates/livon_dev_server/: Cargo.toml
crates/livon_generator/: Cargo.toml
crates/livon_generator/src/generate_statements/: gen_create_anchors.rs  gen_create_fragments.rs  gen_custom_component.rs  gen_if_blk.rs
crates/livon_generator/src/structs/: js_utils.rs
crates/livon_generator/src/transformers/: html_utils.rs  router.rs  utils.rs
crates/livon_html_parser/: README.md
crates/livon_html_parser/examples/get_all_href/: main.rs
crates/livon_html_parser/examples/simple_parser/: main.rs
crates/livon_parser/src/: lib.rs  swc_parser.rs  ts_to_js.rs
crates/lunas_compiler/: Cargo.toml
crates/lunas_compiler/src/: lib.rs
crates/lunas_dev_server/: Cargo.toml
crates/lunas_dev_server/src/: main.rs
crates/lunas_generator/: Cargo.toml
crates/lunas_generator/src/: generate_js.rs  generate_js_from_lunas_script.rs  lib.rs
crates/lunas_generator/src/ast_analyzer/: function_analyzer.rs  mod.rs
crates/lunas_generator/src/generate_statements/: gen_create_anchors.rs  gen_create_event_listener.rs  gen_create_fragments.rs  gen_custom_component.rs  gen_for_blk.rs  gen_if_blk.rs  gen_reference_getter.rs  mod.rs  utils.rs
crates/lunas_generator/src/js_utils/: array.rs
crates/lunas_generator/src/orig_html_struct/: html_manipulation.rs  structs.rs
crates/lunas_generator/src/structs/: ctx.rs  js_analyze.rs  mod.rs  transform_info.rs  transform_targets.rs
crates/lunas_generator/src/transformers/: html_utils.rs  inputs.rs  js_utils.rs  mod.rs  router.rs  utils.rs  utils_swc.rs
crates/lunas_generator/src/utils/: mod.rs  rand_id.rs
crates/lunas_html_parser/: Cargo.toml
crates/lunas_html_parser/src/dom/: element.rs  mod.rs  span.rs
crates/lunas_html_parser/src/grammar/: rules.pest
crates/lunas_parser/: Cargo.toml
crates/lunas_parser/src/: lib.rs  parse2.rs  parse_script.rs  ts_to_js.rs
crates/lunas_parser/src/for_parser/: for_parser.pest  for_parser.rs  mod.rs
crates/lunas_parser/src/structs/: detailed_language_blocks.rs
npm-pkgs/create-lunas/: package-lock.json  package.json
npm-pkgs/create-lunas/src/: main.ts
npm-pkgs/livon/: package.json  readme.md
npm-pkgs/livon-formatter/: readme.md
npm-pkgs/livon/src/: index.ts
npm-pkgs/livon/src/runtime/: index.ts  router.ts
npm-pkgs/lunas/: biome.json  package-lock.json  package.json  tsconfig.json
npm-pkgs/lunas-formatter/: package-lock.json  package.json  readme.md  tsconfig.json
npm-pkgs/lunas-formatter/src/: cli.ts  format.ts  main.ts
npm-pkgs/lunas-formatter/test/: counter-game.formatted.lun  format.test.ts  pass-value.formatted.lun
npm-pkgs/lunas/src/: index.ts
npm-pkgs/lunas/src/compiler/: index.ts
npm-pkgs/lunas/src/engine/: index.ts
npm-pkgs/lunas/src/reactivity/: index.ts
npm-pkgs/lunas/src/router/: index.ts
npm-pkgs/lunas/src/runtime/: index.ts  router.ts
npm-pkgs/lunas/src/types/: global.d.ts
npm-pkgs/vite-plugin-lunas/: package-lock.json  package.json  tsconfig.json
npm-pkgs/vite-plugin-lunas/src/: main.ts
npm-pkgs/vite-plugin-lunas/src/plugins/: lunas-plugin.ts  lunas-router-plugin.ts
test/: package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vitest.config.ts  vitest.d.ts  vitest.setup.ts
test/10_nested_toggle_blocks/: 10.test.ts
test/11_toggle_and_increment/: 11.test.ts
test/12_nested_toggle_blocks/: 12.lun  12.test.ts
test/12_parent_component_static/: 12.lun  12.test.ts  12_child.lun
test/13_child_component_static/: 20.testts
test/13_toggle_and_increment/: 13.test.ts
test/14_toggle_block_with_inner_increment/: 21.testts
test/17_for_block/: 17.test.ts
test/19_parent_component_static/: 19.lun  19.test.ts
test/1_counter/: 1.lun  1.test.ts
test/22_conditional_nested_children/: 22.test.ts
test/23_interleaved_if_blocks/: 23.test.ts
test/24_for_block/: 24.lun  24.test.ts
test/2_stopwatch/: 2.lun  2.test.ts
test/3_color_toggle/: 3.test.ts
test/4_input_binding/: 4.lun  4.test.ts
test/5_reset_message/: 5.lun  5.test.ts
test/6_input_concatenation/: 6.test.ts
test/7_static_message/: 7.test.ts
test/8_simple_toggle_block/: 8.lun  8.test.ts
test/9_multiple_if_blocks_random/: 9.test.ts
