[package]
name = "livon_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.138"
livon_html_parser = { path = "../livon_html_parser" }
nanoid = "0.4.0"
getrandom = { version = "0.2.15", features = ["js"] }
livon_parser = { path = "../livon_parser" }
rand = "0.8.5"
lazy_static = "1.5.0"
itertools = "0.11.0"
swc_ecma_parser = "0.137.16"
swc_common = { version = "0.31.22", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.107.8", features = ["serde-impl"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[dev-dependencies]
pretty_assertions = "1.4.1"
regex = "1.11.1"
backtrace = "0.3.74"

[features]
playground = []
