[package]
name = "lunas_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.138"
lunas_html_parser = { path = "../lunas_html_parser" }
nanoid = "0.4.0"
getrandom = { version = "0.2.15", features = ["js"] }
lunas_parser = { path = "../lunas_parser" }
rand = "0.8.5"
lazy_static = "1.5.0"
itertools = "0.11.0"
swc_ecma_parser = "0.137.16"
swc_common = { version = "0.31.22", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.107.8", features = ["serde-impl"] }
num-bigint = "0.4.6"

[dev-dependencies]
pretty_assertions = "1.4.1"
regex = "1.11.1"
backtrace = "0.3.74"

[features]
playground = []
