[package]
name = "lunas_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.140"
lunas_html_parser = { path = "../lunas_html_parser" }
nanoid = "0.4.0"
getrandom = { version = "0.2.16", features = ["js"] }
lunas_parser = { path = "../lunas_parser" }
rand = "0.8.5"
lazy_static = "1.5.0"
itertools = "0.14.0"
swc_ecma_parser = { version = "11.1.3", features = ["typescript"] }
swc_common = { version = "8.1.1", features = ["tty-emitter"] }
swc_ecma_ast = { version = "8.1.2", features = ["serde-impl"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
swc_ecma_codegen = "10.0.1"
swc_ecma_transforms_base = "12.2.0"
swc_ecma_transforms_typescript = "13.0.0"
swc_ecma_visit = "8.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
regex = "1.11.1"
backtrace = "0.3.74"

[features]
playground = []
