[package]
name = "lunas_html_parser"
version = "0.7.0"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"
repository = "https://github.com/mathiversen/html-parser"
license = "MIT"
description = "A simple and general purpose html/xhtml parser"
keywords = ["html", "parser", "json", "pest", "dom"]
categories = ["parsing", "web-programming"]
readme = "README.md"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "1.0.69"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.138"
doc-comment = "0.3.3"

[dev-dependencies]
indoc = "2.0.5"
insta = { version = "1.42.1", features = ["json"] }
tempfile = "3.16.0"
criterion = "0.4.0"
reqwest = { version = "0.11.27", features = ["blocking", "rustls-tls"] }
clap = { version = "4.5.28", features = ["derive"] }

[[example]]
name = "get_all_href"
path = "examples/get_all_href/main.rs"

[[example]]
name = "simple_parser"
path = "examples/simple_parser/main.rs"
