[package]
name = "lunas_html_parser"
version = "0.7.0"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"
repository = "https://github.com/mathiversen/html-parser"
license = "MIT"
description = "A simple and general purpose html/xhtml parser"
keywords = ["html", "parser", "json", "pest", "dom"]
categories = ["parsing", "web-programming"]
readme = "README.md"

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
doc-comment = "0.3.3"

[dev-dependencies]
indoc = "2.0.6"
insta = { version = "1.43.0", features = ["json"] }
tempfile = "3.19.1"
criterion = "0.5.1"
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"] }
clap = { version = "4.5.37", features = ["derive"] }

[[example]]
name = "get_all_href"
path = "examples/get_all_href/main.rs"

[[example]]
name = "simple_parser"
path = "examples/simple_parser/main.rs"
