[package]
name = "lunas_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = "22.5.2"
swc = { version = "21.0.0" }
nanoid = "0.4.0"
nom = "7.1.3"
serde_json = "1.0.140"
swc_common = { version = "8.1.1", features = ["tty-emitter"] }
swc_ecma_ast = { version = "8.1.2", features = ["serde-impl"] }
swc_ecma_parser = "11.1.3"
lunas_html_parser = { path = "../lunas_html_parser" }
swc_ecma_codegen = "10.0.0"
swc_ecma_transforms_typescript = "13.0.0"
swc_ecma_transforms_base = "12.2.0"
swc_ecma_visit = "8.0.0"
pest = "2.8.0"
pest_derive = "2.8.0"
